[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.9", default-features = false }
bevy_kira_audio = { version = "0.13" }
bevy_asset_loader = { version = "0.14.1" }
bevy-inspector-egui = "0.15"
rand = { version = "0.8.5", features = ["alloc"] }
bevy_prototype_lyon = "0.7.2"
#bevy_mod_debugdump = { git = "https://github.com/jakobhellermann/bevy_mod_debugdump"}

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
